--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Well Hello There</h1> 
-<a href="https://github.com/ItZJameZ"> Click to view my GitHub profile</a>
-<img src="https://i.imgur.com/HeUNm7E.mp4">
+<h1>Well Hello There</h1>
+<p><a href="https://github.com/ItZJameZ"> Click to view my GitHub profile</a></p>
+<p><video src="https://i.imgur.com/HeUNm7E.mp4" width="410" height="205"></video></p>
