--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Well Hello There</h1>
 <p><a href="https://github.com/ItZJameZ"> Click to view my GitHub profile</a></p>
-<p><video src="https://i.imgur.com/HeUNm7E.mp4" width="410" height="205"></video></p>
+<p><a href="https://www.youtube.com/watch?v=0oBx7Jg4m-o"> Or click here for a Laugh.<p>
