--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Well Hello There</h1>
+<h1>Well Hello There :) I know Java but not HTML so please ignore the ugly.</h1>
 <p><a href="https://github.com/ItZJameZ"> Click to view my GitHub profile</a></p>
 <p><a href="https://www.youtube.com/watch?v=0oBx7Jg4m-o"> Or click here for a Laugh.<p>
